[package]
name = "cargo-bdeps"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/rj-jones/bdeps"
categories = ["development-tools", "development-tools::cargo-plugins"]
keywords = ["cargo-subcommand", "cargo", "cli", "crates", "dependencies"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-lock = "9.0.0"
cargo_toml = "0.16.3"
clap = { version = "4.4.6", features = ["derive"] }
